--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,15 @@
 trigger:
   - '*'
   
-  pool:
-    vmImage: 'ubuntu-16.04'
-    demands:
+pool:
+  vmImage: 'ubuntu-16.04'
+  demands:
     - npm
   
-  variables:
-    buildConfiguration: 'Release'
+variables:
+  buildConfiguration: 'Release'
   
-  steps:
+steps:
   - task: UseDotNet@2
     displayName: 'Use .NET Core SDK 3.1.100'
     inputs:
@@ -43,3 +43,15 @@ trigger:
       command: 'build'
       arguments: '--no-restore --configuration Release'
       projects: '**/*.csproj'
+  - task: DotNetCoreCLI@2
+      displayName: 'Publish the project - Release'
+      inputs:
+        command: 'publish'
+        projects: '**/*.csproj'
+        publishWebProjects: false
+        arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+        zipAfterPublish: true
+    
+  - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact: drop'
+      condition: succeeded()
